--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,18 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-    <include src="./partials/hero_header.html"></include>
+    <include src="./partials/hero-header.html"></include>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/about.html"></include>
+    <include src="./partials/advantages.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/customer-reviews.html"></include>
+    <include src="./partials/contacts.html"></include>
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/modal1.html"></include>
+    <include src="./partials/modal2.html"></include>
+    <include src="./partials/modal3.html"></include>
+    <include src="./partials/modal4.html"></include>
+    <include src="./partials/modal5.html"></include>
   </body>
 </html>
